<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="model" type="com.syncloudsoft.mobserve.ui.ForwardingRuleViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/form_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/field_margin"
                android:hint="@string/rule_name_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={model.name}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/webhook_url_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/field_margin"
                android:hint="@string/rule_webhook_url_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={model.webhookUrl}" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:checkedButton="@{model.eventRadio}"
                android:onCheckedChanged="@{(v, i) -> model.setEventRadio(i)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/field_margin">

                <RadioButton
                    android:id="@+id/event_all_radio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/rule_event_all_hint" />

                <RadioButton
                    android:id="@+id/event_call_radio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/rule_event_call_hint" />

                <RadioButton
                    android:id="@+id/event_sms_radio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/rule_event_sms_hint" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/participant_pattern_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/field_margin"
                android:hint="@string/rule_participant_pattern_hint"
                app:helperText="@string/rule_participant_pattern_helper_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={model.participantPattern}" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:checkedButton="@{model.directionRadio}"
                android:onCheckedChanged="@{(v, i) -> model.setDirectionRadio(i)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/field_margin">

                <RadioButton
                    android:id="@+id/direction_all_radio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/rule_direction_all_hint" />

                <RadioButton
                    android:id="@+id/direction_incoming_radio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/rule_direction_incoming_hint" />

                <RadioButton
                    android:id="@+id/direction_outgoing_radio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/rule_direction_outgoing_hint" />

                <RadioButton
                    android:id="@+id/direction_missed_radio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/rule_direction_missed_hint" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/content_pattern_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/field_margin"
                android:hint="@string/rule_content_pattern_hint"
                app:helperText="@string/rule_content_pattern_helper_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={model.contentPattern}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_label"
                app:icon="@drawable/ic_baseline_check_24"
                style="@style/Widget.MaterialComponents.Button.Icon" />

        </LinearLayout>

    </ScrollView>

</layout>
